Updated coadding prog

--- a/Bohlman/code/coadding_median/Makefile
+++ b/Bohlman/code/coadding_median/Makefile
@@ -2,7 +2,7 @@
 .PHONY: all clean
 
 # The program to build
-NAME       := repeated_image_acquisition
+NAME       := coadding_median
 
 # Installation directories for pylon
 PYLON_ROOT ?= /opt/pylon5
