--- a/labBasler/viewBasler/Makefile
+++ b/labBasler/viewBasler/Makefile
@@ -7,15 +7,14 @@ NAME       := view1Basler
 UNAME ?= $(shell uname)
 ifeq ($(UNAME),Darwin)
 	CFLAGS += -D_BSD_SOURCE
-	CXXFLAGS += -D_BSD_SOURCE -I /Library/Frameworks/pylon.framework/Headers/GenICam
+	CXXFLAGS += -O3 -D_BSD_SOURCE -I /Library/Frameworks/pylon.framework/Headers/GenICam
 	LDLIBS += -framework pylon -rpath /Library/Frameworks -rpath /System/Library/Frameworks
 else
 	# Installation directories for pylon
 	PYLON_ROOT ?= /opt/pylon5
 	CFLAGS     += -D_XOPEN_SOURCE=700
-	CXXFLAGS   += -D_XOPEN_SOURCE=700
+	CXXFLAGS   += -O3 -D_XOPEN_SOURCE=700
 	CPPFLAGS   := $(shell $(PYLON_ROOT)/bin/pylon-config --cflags)
-	CXXFLAGS   := #e.g., CXXFLAGS=-g -O0 for debugging
 	LDFLAGS    := $(shell $(PYLON_ROOT)/bin/pylon-config --libs-rpath)
 	LDLIBS     := $(shell $(PYLON_ROOT)/bin/pylon-config --libs) -L/opt/cfitsio -lxpa
 endif
